--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.7.0",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.9.4",
     "headlessui": "^0.0.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
