--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@heroicons/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.9.4",
     "headlessui": "^0.0.0",
+    "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "prisma": "^6.7.0",
